tests/NormalTests/paczka1/fuzzy1/70881375.err
Error in line 8: f8aUD1T A765 49,7
Error in line 11: aEXB39q S884 30,9
Error in line 15: aEXB39q A765 59,2
Error in line 19: aEXB39q S117 2,0
Error in line 30: f8aUD1T A765 42,0
Error in line 29: cJq S117 82,6
Error in line 31: f8aUD1T S117 18,9
Error in line 28: fxlld S117 34,3
